# gomoku

./: .gitignore  .ideas  README.md  ideas.txt  main.py  network.json  pyproject.toml  setup.py  sql_app.db
alembic/: env.py
api/: board_functions.py  check_breakable.py  get_move.py  get_threats.py  gomoku_server.py  main.py  pyproject.toml
api/genetics/: black.json  check_lines.py  genetics.py  genetics_get_threats.py
api/test/: check_line.py  check_side.py  check_vulnerability.py  test_check_line.py  test_check_side.py  test_check_vulnerability.py  test_line_breakable.py
binary_board/: board_functions.py  get_move.py  get_threats.py  gomoku.py
cython_src/: board_functions.c  board_functions.pyx  get_lines.c  get_lines.pyx  get_move.c  get_move.pxd  get_move.pyx  get_threats.c  get_threats.pyx  gomoku.py  setup.py
gomoku_ui/: package-lock.json  package.json
gomoku_ui/server/: app.js  package.json
numba_src/: numba_algorithm.py  numba_gamestate.py  numba_utils.py
pure_python/: black.json  board_functions.py  board_utils.py  check_lines.py  genetics.py  genetics_get_move.py  genetics_get_threats.py  get_lines.py  get_move.py  get_threats.py  gomoku.py  gomoku_server.py  hard_mode_get_move.py  hard_mode_get_threats.py  save_black.json  save_white.json  white.json
python_server/: get_move.py  get_threats.py  socket_handler.py
src/: algorithm.py  board.py  error.py  game.py  gamestate.py  heuristic.py  numba_algorithm.py  numba_utils.py  players.py  stone.py  utils.py
test/: test_patterns.py
ui/: README.md  package-lock.json  package.json
(+66 files in other folders)
