[tool.poetry]
name = "gomoku"
version = "0.1.0"
description = ""
authors = ["Yann <yannbecret@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
termcolor = "^2.0.1"
colorama = "^0.4.5"
numpy = "^1.23.4"
numba = "^0.56.3"
fastapi = "^0.85.1"
uvicorn = {extras = ["standard"], version = "^0.19.0"}
sqlalchemy = "^1.4.42"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
