[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Quentin <synkx@hotmail.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
uvicorn = {extras = ["standard"], version = "^0.19.0"}
flake8 = "^5.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
